<resources>
    <string name="rear">rear</string>
    <string name="front">Font</string>
    <string name="siren">siren</string>
    <string name="whistle">whistle</string>
    <string name="Rear">Rear</string>
    <string name="shark">Shaking alarm</string>
    <string name="connected_device">Anti-lost already connected</string>
    <string name="get_pic">We have obtained photographs image</string>
    <string name="camera_focus_info">After the opening, will capture more clearly, but the camera will be slower</string>
    <string name="camera_focus">Focus capture</string>
    <string name="sos_info">When using the mobile phone screen and speak, your emergency contact will receive your SMS</string>
    <string name="dail_stop">record</string>
    <string name="input_sos_hint">Please enter for help information</string>
    <string name="send_call">The sender</string>
    <string name="send_call_number">Phone number</string>
    <string name="dai_number">Dial</string>
    <string name="stop_communication">End call</string>
    <string name="dail_speaker">speaker</string>
    <string name="dail_alarm">Mute</string>
    <string name="dail_hander">Headset</string>
    <string name="call_number">Make a phone call</string>
    <string name="contact">Disguise phone</string>
    <string name="sos">Emergency call for help</string>
    <string name="light">Flash</string>
    <string name="record_info">record</string>
    <string name="zipai">capture</string>
    <string name="camear_set">Camera settings</string>
    <string name="key_set_value">Not yet set</string>
    <string name="un_connect_device">Has not been linked to the anti lost device</string>
    <string name="shou_shi">Gesture</string>
    <string name="action_settings">Settings</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="preference_category_camera_effects">Camera Effects</string>
    <string name="preference_auto_stabilise">Auto-stabilise</string>
    <string name="preference_auto_stabilise_summary">Images will be rotated so they are automatically level (photos only) (slower to take photos, and may fail on devices with too low memory)</string>
    <string name="preference_color_effect">Apply a color effect</string>
    <string name="preference_color_effect_summary">Applies the selected color effect to the photo</string>
    <string name="preference_scene_mode">Apply a scene mode</string>
    <string name="preference_scene_mode_summary">Optimise the photo for different scenes</string>
    <string name="preference_white_balance">Set the white balance</string>
    <string name="preference_white_balance_summary">Choose a setting to adjust the white balance</string>
    <string name="preference_exposure">Set the exposure compensation</string>
    <string name="preference_exposure_summary">Set to 0 for the default exposure compensation.</string>
    <string name="preference_face_detection">Face detection</string>
    <string name="preference_face_detection_summary">Whether to use face detection instead of focus areas.</string>
    <string name="preference_category_camera_controls">Camera Controls</string>
    <string name="preference_timer">Timer</string>
    <string name="preference_timer_summary">Set a timer for the camera</string>
    <string name="preference_timer_beep">Timer beep</string>
    <string name="preference_timer_beep_summary">Whether to beep when timer is counting down, or for burst mode delay</string>
    <string name="preference_burst_mode">Burst mode</string>
    <string name="preference_burst_mode_summary">Whether to take multiple photos</string>
    <string name="preference_burst_interval">Burst mode interval</string>
    <string name="preference_burst_interval_summary">Delay (if any) between taking photos in burst mode</string>
    <string name="preference_screen_camera_controls_more">More camera controls…</string>
    <string name="preference_pause_preview">Pause after taking photo</string>
    <string name="preference_pause_preview_summary">Whether to pause the screen after taking a photo, with the option to share or delete the photo</string>
    <string name="preference_shutter_sound">Shutter sound</string>
    <string name="preference_shutter_sound_summary">Whether to play a sound when taking a photo (requires Android 4.2 or greater to disable)</string>
    <string name="preference_volume_keys">Volume keys</string>
    <string name="preference_volume_keys_summary">Set behaviour for when volume keys are pressed</string>
    <string name="preference_screen_gui">On screen GUI…</string>
    <string name="preference_preview_size">Preview size</string>
    <string name="preference_preview_size_summary">How to choose the preview size</string>
    <string name="preference_ui_placement">UI placement</string>
    <string name="preference_ui_placement_summary">Whether to have a left-handed or right-handed user interface</string>
    <string name="preference_save_location">Save location</string>
    <string name="preference_save_location_summary">Name of folder to save the photo/video files in (can also be a full path)</string>
    <string name="preference_show_zoom">Show zoom</string>
    <string name="preference_show_zoom_summary">Display the current camera zoom level on screen (when zoomed in)</string>
    <string name="preference_show_zoom_controls">Show zoom -/+ controls</string>
    <string name="preference_show_zoom_controls_summary">Whether to show the -/+ buttons for zoom control</string>
    <string name="preference_free_memory">Show free memory</string>
    <string name="preference_free_memory_summary">Display the remaining device storage space on screen</string>
    <string name="preference_show_angle">Show angle</string>
    <string name="preference_show_angle_summary">Display the current device orientation angle on screen</string>
    <string name="preference_show_angle_line">Show angle line</string>
    <string name="preference_show_angle_line_summary">Display horizontal level line</string>
    <string name="preference_show_geo_direction">Show compass direction</string>
    <string name="preference_show_geo_direction_summary">Display the compass direction of the device on screen</string>
    <string name="preference_grid">Show a grid</string>
    <string name="preference_grid_summary">Display one of various grids</string>
    <string name="preference_thumbnail_animation">Show thumbnail animation</string>
    <string name="preference_thumbnail_animation_summary">Display moving thumbnail animation when taking a photo</string>
    <string name="preference_max_brightness">Force maximum brightness</string>
    <string name="preference_max_brightness_summary">Force screen display to be at maximum brightness, rather than device default</string>
    <string name="preference_category_camera_quality">Photo and Video Settings</string>
    <string name="preference_screen_camera_quality">Photo and video settings…</string>
    <string name="preference_resolution">Camera resolution</string>
    <string name="preference_resolution_summary">Set the resolution of photos taken by the camera</string>
    <string name="preference_quality">Image quality</string>
    <string name="preference_quality_summary">Set the image quality of saved photo images (recommended value is 90%%)</string>
    <string name="preference_location">Store location data (Geotagging)</string>
    <string name="preference_location_summary">Whether to store GPS location data in the photos</string>
    <string name="video_quality">Video resolution</string>
    <string name="video_quality_summary">Set the resolution of videos</string>
    <string name="preference_force_video_4k">Force 4K UHD video (experimental)</string>
    <string name="preference_force_video_4k_summary">Enable 3840x2160 resolution for video recording on back camera - this will only work if your device supports it, and may crash if not!</string>
    <string name="preference_record_audio">Record audio</string>
    <string name="preference_record_audio_summary">Whether to record audio when recording video</string>
    <string name="preference_record_audio_src">Audio source</string>
    <string name="preference_record_audio_src_summary">Microphone to use for recording audio</string>
    <string name="preference_category_online">Misc</string>
    <string name="preference_online_help">Online help</string>
    <string name="preference_donate">Donate to support development</string>
    <string name="preference_donate_summary">If you like this app, please consider making a donation. You can do this by purchasing my "donation app" - click this option will open up the page for my donation app. Thanks!</string>
    <string name="preference_about">About</string>
    <string name="preference_about_summary">App and debug information</string>
    <string name="about_ok">OK</string>
    <string name="message">With your new text message</string>
    <string name="about_available">Available</string>
    <string name="name_is_null">The name is not null</string>
    <string name="input_name">input name</string>
    <string name="disturb_switch">Please open the disturb mode switch</string>
    <string name="contact_empty">Contact is empty</string>
    <string name="sms_empty">Message is empty</string>
    <string name="find_device_donot_touch">Finding the device , please do not touch</string>
    <string name="find_device_info">Finding device,Please wait a moment</string>
    <string name="found_device">Find Device</string>
    <string name="already_one_device_conncect">There is already a device connection</string>
    <string name="un_delete">The first item, can not be deleted</string>
    <string name="about_not_available">Not available</string>
    <string name="swit_two_click">Switching double click function</string>
    <string name="swit_three_click">Switching three click function</string>
    <string name="swit_four_click">Switching four click function</string>
    <string name="about_copy_to_clipboard">Copy to clipboard</string>
    <string name="take_photo">Take Photo</string>
    <string name="gallery">Gallery</string>
    <string name="exposure">Exposure</string>
    <string name="focus_mode">Focus Mode</string>
    <string name="flash_mode">Flash Mode</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="switch_video">Switch Video</string>
    <string name="trash">Delete Last Picture</string>
    <string name="share">Share Photo</string>
    <string name="zoom">Zoom</string>
    <string name="failed_to_open_camera_1">FAILED TO OPEN CAMERA.</string>
    <string name="failed_to_open_camera_2">CAMERA MAY BE IN USE</string>
    <string name="failed_to_open_camera_3">BY ANOTHER APPLICATION?</string>
    <string name="not_supported">not supported on your device</string>
    <string name="failed_to_reconnect_camera">Failed to reconnect to camera</string>
    <string name="device_not_ble">The device does not have Bluetooth function!</string>
    <string name="connect_timeout">Connect time out</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="name_non">Name can not be null</string>
    <string name="take_pic">Capture</string>
    <string name="from_gallery">Select from gllery</string>
    <string name="set_name">Set Name</string>
    <string name="setting">Setting</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>
    <string name="recording">Recording</string>
    <string name="battery_low_tip">Low battery prompt window</string>
    <string name="battery">Less than 70% of electricity,suggest to replace the battery, to avoid affecting the normal use</string>
    <string name="edit">Edit</string>
    <string name="vibration">Vibration</string>
    <string name="ring">Ringtone</string>
    <string name="sound_size">Volume</string>
    <string name="continue_time">Duration</string>
</resources>