<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_device"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/bg_set_selector"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/setting_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/setting"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_size_20"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_camera"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bg_camera_set_selector"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/camera_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/camera"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_size_20"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_location"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/bg_location_set_selector"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/location_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/location"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_size_20"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_record"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bg_record_set_selector"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/recording_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/recording"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_size_20"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </ImageView>

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="1.1"
                android:textColor="#FF0000"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>