<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="90"
        android:orientation="horizontal" >

        <include
            android:id="@+id/include_head"
            layout="@layout/item_head" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_vibration"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="55"
                android:orientation="horizontal"
                android:paddingLeft="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_vibration" >
                </ImageView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vibration"
                        android:textColor="@color/dark"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingRight="25dp" >

                <CheckBox
                    android:id="@+id/cb_shock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/cb_switch" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/ic_divider" >
        </ImageView>

        <LinearLayout
            android:id="@+id/ll_ring"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/ic_linear_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:orientation="horizontal"
                android:paddingLeft="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_ringtonex" >
                </ImageView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_ring"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ring"
                        android:textColor="@color/dark"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingRight="25dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right" >
                </ImageView>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/ic_divider" >
        </ImageView>

        <LinearLayout
            android:id="@+id/ll_sound"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="65"
                android:orientation="horizontal"
                android:paddingLeft="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sounds" >
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="25dp"
                    android:text="@string/sound_size"
                    android:textColor="@color/dark"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="35"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingRight="25dp" >

                <LinearLayout
                    android:id="@+id/ll_volume_small"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="80"
                    android:gravity="center_vertical|right"
                    android:orientation="vertical"
                    android:paddingRight="10dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_volume_small" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_volume_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="40"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <SeekBar
                        android:id="@+id/sb_volume_set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxHeight="5dp"
                        android:minHeight="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:progressDrawable="@drawable/pb_progress"
                        android:thumb="@drawable/ic_thumb" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_volume_max"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="80"
                       android:gravity="center_vertical|left"
                    android:orientation="vertical"
                    android:paddingLeft="10dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_volume_set_max" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/ic_divider" >
        </ImageView>

        <LinearLayout
            android:id="@+id/ll_duration"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:orientation="horizontal"
                android:paddingLeft="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_duration" >
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="25dp"
                    android:text="@string/continue_time"
                    android:textColor="@color/dark"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingRight="25dp" >

                <SeekBar
                    android:id="@+id/sb_duration_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="600"
                    android:maxHeight="5dp"
                    android:minHeight="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:progressDrawable="@drawable/pb_progress"
                    android:thumb="@drawable/ic_thumb" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/ic_divider" >
        </ImageView>
    </LinearLayout>

</LinearLayout>